kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-webapp
  labels:
    app: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: webapp
        image: pravindevopsch/webapp:2.0
        ports:
        - containerPort: 5000
          resources:
        resources:
          requests:
            cpu: "100m"
          limits:
            cpu: "200m"
      #   volumeMounts:
      #     - name: secret-volume
      #       mountPath: /etc/secret-volume
      # volumes:
      #   - name: secret-volume
      #     secret:
      #       secretName: secret-test
        # resources: 
        #   requests:
        #     cpu: 250m
